--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   "homepage": "https://github.com/Granze/react-starterify",
   "dependencies": {
     "react": "^0.13.0",
+    "react-router": "^0.13.3",
     "superagent": "^1.0.0"
   },
   "devDependencies": {
