switch from using validator inside this project to the new validator on github that will become an npm module

--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   },
   "homepage": "https://github.com/Granze/react-starterify",
   "dependencies": {
+    "BIDS-Validator": "git://github.com/Squishymedia/BIDS-Validator.git",
     "async": "^1.2.1",
     "jshint": "^2.8.0",
     "react": "^0.13.0",
