--- a/package.json
+++ b/package.json
@@ -25,8 +25,8 @@
   },
   "homepage": "https://github.com/Granze/react-starterify",
   "dependencies": {
-    "BIDS-Validator": "git://github.com/Squishymedia/BIDS-Validator.git",
     "async": "^1.2.1",
+    "bids-validator": "^0.1.3",
     "jshint": "^2.8.0",
     "react": "^0.13.0",
     "react-bootstrap": "^0.23.0",
