--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "bids-validator": "^0.2.0",
     "es6-react-mixins": "^0.1.6",
     "jshint": "^2.8.0",
+    "pluralize": "^1.1.2",
     "react": "^0.13.0",
     "react-bootstrap": "^0.23.0",
     "react-router": "^0.13.3",
