--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "dependencies": {
     "async": "^1.2.1",
     "bids-validator": "^0.3.2",
+    "bowser": "^1.0.0",
     "es6-react-mixins": "^0.1.6",
     "jshint": "^2.8.0",
     "moment": "^2.10.3",
