--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "author": "Squishymedia",
   "dependencies": {
     "async": "^1.2.1",
+    "babel-polyfill": "^6.6.1",
     "bids-validator": "0.15.8",
     "bowser": "^1.0.0",
     "es6-react-mixins": "^0.1.6",
