--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git@gitlab.sqm.io:stanford_crn/CRN_SERVER.git"
+    "url": "git@github.com:poldracklab/crn_server.git"
   },
   "author": "Squishymedia",
   "license": " ",
@@ -17,7 +17,6 @@
     "babel": "^5.8.23",
     "bids-validator": "^0.16.0",
     "body-parser": "^1.14.0",
-    "cron": "^1.1.0",
     "express": "^4.13.3",
     "mongodb": "^2.0.46",
     "morgan": "^1.6.1",
