--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   "dependencies": {
     "async": "^1.5.0",
     "babel": "^5.8.23",
-    "bids-validator": "^0.16.0",
+    "bids-validator": "0.16.3",
     "body-parser": "^1.14.0",
     "express": "^4.13.3",
     "mongodb": "^2.0.46",
