--- a/package.json
+++ b/package.json
@@ -1,22 +1,14 @@
 {
   "name": "CRN",
-  "version": "0.0.9",
-  "description": "React JS application skeleton using Browserify and other awesome tools",
+  "version": "0.0.1",
+  "description": "React JS web frontend for the CRN application.",
   "main": "app.js",
   "repository": {
     "type": "git"
   },
-  "keywords": [
-    "gulp",
-    "react",
-    "browserify",
-    "seed",
-    "boilerplate",
-    "kickstarter",
-    "ES6",
-    "6to5",
-    "babel"
-  ],
+  "scripts": {
+    "lint": "./node_modules/eslint/bin/eslint.js"
+  },
   "author": "Squishymedia",
   "dependencies": {
     "async": "^1.2.1",
@@ -24,7 +16,6 @@
     "bids-validator": "0.16.6",
     "bowser": "^1.0.0",
     "es6-react-mixins": "^0.1.6",
-    "jshint": "^2.8.0",
     "moment": "^2.10.3",
     "pluralize": "^1.1.2",
     "react": "^0.13.0",
@@ -40,6 +31,8 @@
     "browser-sync": "^2.2.3",
     "browserify": "^9.0.3",
     "del": "^1.1.1",
+    "eslint": "^2.7.0",
+    "eslint-plugin-react": "^4.3.0",
     "gulp": "^3.8.11",
     "gulp-autoprefixer": "2.1.0",
     "gulp-changed": "^1.2.1",
