updated lint config for jsx

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -4,7 +4,7 @@
         "commonjs": true,
         "es6": true
     },
-    "extends": "eslint:recommended",
+    "extends": ["eslint:recommended", "plugin:react/recommended"],
     "parserOptions": {
         "ecmaFeatures": {
             "experimentalObjectRestSpread": true,
@@ -32,5 +32,11 @@
             "error",
             "always"
         ]
+    },
+    "settings": {
+        "react": {
+            "pragma": "React",
+            "version": "0.13.3"
+        }
     }
 }
