--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "type": "git"
   },
   "scripts": {
-    "lint": "./node_modules/eslint/bin/eslint.js"
+    "lint": "eslint"
   },
   "author": "Squishymedia",
   "dependencies": {
