--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "lint": "eslint",
     "start": "node index.js"
   },
   "repository": {
@@ -22,5 +23,8 @@
     "morgan": "^1.6.1",
     "request": "^2.63.0",
     "tar-fs": "^1.9.0"
+  },
+  "devDependencies": {
+    "eslint": "^2.7.0"
   }
 }
