--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "bids-validator": "0.16.6",
     "bowser": "^1.0.0",
     "es6-react-mixins": "^0.1.6",
+    "favico.js": "git://github.com/ejci/favico.js#0.3.10",
+    "hellojs": "^1.12.0",
     "moment": "^2.10.3",
     "pluralize": "^1.1.2",
     "react": "^0.13.0",
@@ -23,8 +25,7 @@
     "react-router": "^0.13.3",
     "reflux": "^0.2.7",
     "spark-md5": "^1.0.0",
-    "superagent": "^1.0.0",
-    "favico.js": "git://github.com/ejci/favico.js#0.3.10"
+    "superagent": "^1.0.0"
   },
   "devDependencies": {
     "babelify": "^5.0.4",
