--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "eslint": "^2.7.0",
     "eslint-plugin-react": "^4.3.0",
     "gulp": "^3.8.11",
+    "gulp-cachebust": "0.0.6",
     "gulp-changed": "^1.2.1",
     "gulp-csso": "^1.0.0",
     "gulp-notify": "^2.2.0",
