--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "gulp-cachebust": "0.0.6",
     "gulp-changed": "^1.2.1",
     "gulp-csso": "^1.0.0",
+    "gulp-if": "^2.0.0",
     "gulp-notify": "^2.2.0",
     "gulp-sass": "^2.2.0",
     "gulp-sourcemaps": "^1.5.0",
