--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "babelify": "^5.0.4",
     "browser-sync": "^2.2.3",
     "browserify": "^9.0.3",
-    "del": "^1.1.1",
+    "del": "2.2.0",
     "eslint": "^2.7.0",
     "eslint-plugin-react": "^4.3.0",
     "gulp": "^3.8.11",
