--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "babel-polyfill": "^6.6.1",
     "bids-validator": "0.17.0",
     "bowser": "^1.0.0",
+    "bytes": "^2.3.0",
     "es6-react-mixins": "^0.1.6",
     "favico.js": "git://github.com/ejci/favico.js#0.3.10",
     "hellojs": "^1.12.0",
