--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "babelify": "^5.0.4",
     "browser-sync": "^2.2.3",
     "browserify": "^9.0.3",
+    "connect-history-api-fallback": "^1.2.0",
     "del": "2.2.0",
     "eslint": "^2.7.0",
     "eslint-plugin-react": "^4.3.0",
