--- a/package.json
+++ b/package.json
@@ -21,8 +21,9 @@
     "hellojs": "^1.12.0",
     "moment": "^2.10.3",
     "pluralize": "^1.1.2",
-    "react": "^0.13.0",
-    "react-bootstrap": "^0.23.0",
+    "react": "0.14.8",
+    "react-bootstrap": "0.29.4",
+    "react-dom": "0.14.0",
     "react-router": "^0.13.3",
     "reflux": "^0.2.7",
     "spark-md5": "^1.0.0",
