Began building archiving strategy

--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "author": "Squishymedia",
   "license": " ",
   "dependencies": {
+    "archiver": "^1.0.0",
     "async": "^1.5.0",
     "babel": "^5.8.23",
     "bids-validator": "0.18.7",
