--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "es6-react-mixins": "^0.1.6",
     "favico.js": "git://github.com/ejci/favico.js#0.3.10",
     "hellojs": "^1.12.0",
+    "linkifyjs": "2.0.5",
     "moment": "^2.10.3",
     "pluralize": "^1.1.2",
     "react": "0.14.8",
@@ -26,6 +27,7 @@
     "react-dom": "0.14.0",
     "react-router": "^0.13.3",
     "reflux": "^0.2.7",
+    "remarkable": "1.6.2",
     "spark-md5": "^1.0.0",
     "superagent": "^1.0.0"
   },
