Setup basic email library

--- a/package.json
+++ b/package.json
@@ -22,8 +22,10 @@
     "express": "^4.13.3",
     "mongodb": "^2.0.46",
     "morgan": "^1.6.1",
+    "nodemailer": "^2.5.0",
     "request": "^2.63.0",
-    "tar-fs": "^1.9.0"
+    "tar-fs": "^1.9.0",
+    "underscore": "^1.8.3"
   },
   "devDependencies": {
     "eslint": "^2.7.0"
