--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "body-parser": "^1.14.0",
     "cron": "^1.1.0",
     "express": "^4.13.3",
+    "juice": "^2.0.0",
     "mongodb": "^2.0.46",
     "morgan": "^1.6.1",
     "nodemailer": "^2.5.0",
