--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "lint": "eslint **/**/*.js",
-    "start": "node index.js"
+    "start": "node index.js",
+    "test": "./node_modules/.bin/mocha --compilers js:babel/register tests/**/"
   },
   "repository": {
     "type": "git",
@@ -31,6 +32,7 @@
     "underscore": "^1.8.3"
   },
   "devDependencies": {
-    "eslint": "^2.7.0"
+    "eslint": "^2.7.0",
+    "mocha": "^3.0.2"
   }
 }
