--- a/circle.yml
+++ b/circle.yml
@@ -14,3 +14,10 @@ test:
     - npm run lint
     # Run unit tests
     - npm run test
+
+deployment:
+  hub:
+    branch: circle-ci
+    commands:
+      - if [[ -n "$DOCKER_PASS" ]]; then docker login -e $DOCKER_EMAIL -u $DOCKER_USER -p $DOCKER_PASS && docker push constellates/${CIRCLE_PROJECT_REPONAME}:$CIRCLE_SHA; fi :
+          timeout: 21600
