--- a/circle.yml
+++ b/circle.yml
@@ -19,7 +19,5 @@ deployment:
   hub:
     branch: circle-ci
     commands:
-      - if [[ -n "$DOCKER_PASS" ]]; then docker login -e $DOCKER_EMAIL -u $DOCKER_USER -p $DOCKER_PASS && docker push constellates/${CIRCLE_PROJECT_REPONAME}:$CIRCLE_SHA; fi :
-          timeout: 21600
-      - if [[ -n "$DOCKER_PASS" ]]; then docker login -e $DOCKER_EMAIL -u $DOCKER_USER -p $DOCKER_PASS && docker tag constellates/${CIRCLE_PROJECT_REPONAME}:$CIRCLE_SHA; constellates/${CIRCLE_PROJECT_REPONAME}:${CIRCLE_BRANCH}-V${CIRCLE_BUILD_NUM}-${CIRCLE_SHA1:0:6} && docker push constellates/${CIRCLE_PROJECT_REPONAME}:${CIRCLE_BRANCH}-V${CIRCLE_BUILD_NUM}-${CIRCLE_SHA1:0:6}; fi :
+      - if [[ -n "$DOCKER_PASS" ]]; then docker login -e $DOCKER_EMAIL -u $DOCKER_USER -p $DOCKER_PASS && docker push constellates/${CIRCLE_PROJECT_REPONAME}:tagPrefix-$npm_package_version; fi :
           timeout: 21600
