--- a/circle.yml
+++ b/circle.yml
@@ -6,7 +6,7 @@ machine:
 
 dependencies:
   pre:
-    - docker build -t constellates/$CIRCLE_PROJECT_REPONAME:$CIRCLE_SHA1 .
+    - docker build -t constellates/$CIRCLE_PROJECT_REPONAME .
 
 test:
   override:
@@ -15,9 +15,14 @@ test:
     # Run unit tests
     - npm run test
 
+    # Lint
+    - docker run constellates/$CIRCLE_PROJECT_REPONAME npm run lint
+    # Unit Tests
+    - docker run constellates/$CIRCLE_PROJECT_REPONAME npm run test
+
 deployment:
   hub:
     branch: circle-ci
     commands:
-      - if [[ -n "$DOCKER_PASS" ]]; then docker login -e $DOCKER_EMAIL -u $DOCKER_USER -p $DOCKER_PASS && docker push constellates/${CIRCLE_PROJECT_REPONAME}:tagPrefix-$npm_package_version; fi :
-          timeout: 21600
+      - docker login -e $DOCKER_EMAIL -u $DOCKER_USER -p $DOCKER_PASS
+      - docker tag constellates/$CIRCLE_PROJECT_REPONAME constellates/$CIRCLE_PROJECT_REPONAME:tagPrefix-1.1.1
