try assigning package version variable later

--- a/circle.yml
+++ b/circle.yml
@@ -26,6 +26,8 @@ deployment:
   hub:
     branch: circle-ci
     commands:
+      - PACKAGE_VERSION=$(node -p -e "require('./package.json').version")
+      - echo $PACKAGE_VERSION
       - docker login -e $DOCKER_EMAIL -u $DOCKER_USER -p $DOCKER_PASS
       - docker tag constellates/$CIRCLE_PROJECT_REPONAME constellates/$CIRCLE_PROJECT_REPONAME:dev-$PACKAGE_VERSION
       - docker push constellates/$CIRCLE_PROJECT_REPONAME
