Get package version without trying to set env vars

--- a/circle.yml
+++ b/circle.yml
@@ -7,8 +7,6 @@ machine:
 dependencies:
   pre:
     - docker build -t constellates/$CIRCLE_PROJECT_REPONAME .
-  post:
-    - PACKAGE_VERSION=$(node -p -e "require('./package.json').version")
 
 test:
   override:
@@ -26,8 +24,7 @@ deployment:
   hub:
     branch: circle-ci
     commands:
-      - PACKAGE_VERSION=$(node -p -e "require('./package.json').version")
-      - echo $PACKAGE_VERSION
+      - echo $(node -p -e "require('./package.json').version")
       - docker login -e $DOCKER_EMAIL -u $DOCKER_USER -p $DOCKER_PASS
-      - docker tag constellates/$CIRCLE_PROJECT_REPONAME constellates/$CIRCLE_PROJECT_REPONAME:dev-$PACKAGE_VERSION
+      - docker tag constellates/$CIRCLE_PROJECT_REPONAME constellates/$CIRCLE_PROJECT_REPONAME:dev-$(node -p -e "require('./package.json').version")
       - docker push constellates/$CIRCLE_PROJECT_REPONAME
