--- a/circle.yml
+++ b/circle.yml
@@ -3,20 +3,18 @@ machine:
     version: 4.3.0
   services:
     - docker
-  environment:
-    BUILD_TAG: ${CIRCLE_BRANCH}-$(node -p -e "require('./package.json').version")
 
 dependencies:
   pre:
     - echo $BUILD_TAG
-    - docker build -t constellates/$CIRCLE_PROJECT_REPONAME:$(node -p -e "require('./package.json').version") .
+    - docker build -t constellates/$CIRCLE_PROJECT_REPONAME:$([ "$CIRCLE_BRANCH" == circle-ci ] && echo "dev-" || echo "")$(node -p -e "require('./package.json').version") .
 
 test:
   override:
     # Lint
-    - docker run constellates/$CIRCLE_PROJECT_REPONAME:$(node -p -e "require('./package.json').version") npm run lint
+    - docker run constellates/$CIRCLE_PROJECT_REPONAME:$([ "$CIRCLE_BRANCH" == circle-ci ] && echo "dev-" || echo "")$(node -p -e "require('./package.json').version") npm run lint
     # Unit Tests
-    - docker run constellates/$CIRCLE_PROJECT_REPONAME:$(node -p -e "require('./package.json').version") npm run test
+    - docker run constellates/$CIRCLE_PROJECT_REPONAME:$([ "$CIRCLE_BRANCH" == circle-ci ] && echo "dev-" || echo "")$(node -p -e "require('./package.json').version") npm run test
 
 deployment:
   hub:
