--- a/circle.yml
+++ b/circle.yml
@@ -3,23 +3,25 @@ machine:
     version: 4.3.0
   services:
     - docker
+  enviroment
+    BRANCH_TAG: $([ "$CIRCLE_BRANCH" == circle-ci ] && echo "dev-" || echo "")
 
 dependencies:
   pre:
-    - echo $BUILD_TAG
-    - docker build -t constellates/$CIRCLE_PROJECT_REPONAME:$([ "$CIRCLE_BRANCH" == circle-ci ] && echo "dev-" || echo "")$(node -p -e "require('./package.json').version") .
+    - echo $BRANCH_TAG
+    - docker build -t constellates/$CIRCLE_PROJECT_REPONAME:$BRANCH_TAG$(node -p -e "require('./package.json').version") .
 
 test:
   override:
     # Lint
-    - docker run constellates/$CIRCLE_PROJECT_REPONAME:$([ "$CIRCLE_BRANCH" == circle-ci ] && echo "dev-" || echo "")$(node -p -e "require('./package.json').version") npm run lint
+    - docker run constellates/$CIRCLE_PROJECT_REPONAME:$BRANCH_TAG$(node -p -e "require('./package.json').version") npm run lint
     # Unit Tests
-    - docker run constellates/$CIRCLE_PROJECT_REPONAME:$([ "$CIRCLE_BRANCH" == circle-ci ] && echo "dev-" || echo "")$(node -p -e "require('./package.json').version") npm run test
+    - docker run constellates/$CIRCLE_PROJECT_REPONAME:$BRANCH_TAG$(node -p -e "require('./package.json').version") npm run test
 
 deployment:
   hub:
     branch: circle-ci
     commands:
       - docker login -e $DOCKER_EMAIL -u $DOCKER_USER -p $DOCKER_PASS
-      - docker tag constellates/$CIRCLE_PROJECT_REPONAME constellates/$CIRCLE_PROJECT_REPONAME:$([ "$CIRCLE_BRANCH" == circle-ci ] && echo "dev-" || echo "")latest
+      # - docker tag constellates/$CIRCLE_PROJECT_REPONAME constellates/$CIRCLE_PROJECT_REPONAME:${BRANCH_TAG}latest
       - docker push constellates/$CIRCLE_PROJECT_REPONAME
