--- a/circle.yml
+++ b/circle.yml
@@ -16,9 +16,15 @@ test:
     - docker run poldracklab/$CIRCLE_PROJECT_REPONAME:$([ "$CIRCLE_BRANCH" == dev ] && echo "dev-" || echo "")$(node -p -e "require('./package.json').version") npm run test
 
 deployment:
-  hub:
+  development:
     branch: dev
     commands:
       - docker login -e $DOCKER_EMAIL -u $DOCKER_USER -p $DOCKER_PASS
-      - docker tag poldracklab/$CIRCLE_PROJECT_REPONAME:$([ "$CIRCLE_BRANCH" == dev ] && echo "dev-" || echo "")$(node -p -e "require('./package.json').version") poldracklab/$CIRCLE_PROJECT_REPONAME:$([ "$CIRCLE_BRANCH" == dev ] && echo "dev-" || echo "")latest
+      - docker tag poldracklab/$CIRCLE_PROJECT_REPONAME:dev-$(node -p -e "require('./package.json').version") poldracklab/$CIRCLE_PROJECT_REPONAME:dev-latest
+      - docker push poldracklab/$CIRCLE_PROJECT_REPONAME
+  production:
+    branch: master
+    commands:
+      - docker login -e $DOCKER_EMAIL -u $DOCKER_USER -p $DOCKER_PASS
+      - docker tag poldracklab/$CIRCLE_PROJECT_REPONAME:$(node -p -e "require('./package.json').version") poldracklab/$CIRCLE_PROJECT_REPONAME:latest
       - docker push poldracklab/$CIRCLE_PROJECT_REPONAME
