--- a/circle.yml
+++ b/circle.yml
@@ -6,14 +6,14 @@ machine:
 
 dependencies:
   pre:
-    - docker build -t constellates/$CIRCLE_PROJECT_REPONAME:$([ "$CIRCLE_BRANCH" == circle-ci ] && echo "circle-ci-" || echo "")$(node -p -e "require('./package.json').version") .
+    - docker build -t constellates/$CIRCLE_PROJECT_REPONAME:$([ "$CIRCLE_BRANCH" == circle-ci ] && echo "dev-" || echo "")$(node -p -e "require('./package.json').version") .
 
 test:
   override:
     # Lint
-    - docker run constellates/$CIRCLE_PROJECT_REPONAME:$([ "$CIRCLE_BRANCH" == circle-ci ] && echo "circle-ci-" || echo "")$(node -p -e "require('./package.json').version") npm run lint
+    - docker run constellates/$CIRCLE_PROJECT_REPONAME:$([ "$CIRCLE_BRANCH" == circle-ci ] && echo "dev-" || echo "")$(node -p -e "require('./package.json').version") npm run lint
     # Unit Tests
-    - docker run constellates/$CIRCLE_PROJECT_REPONAME:$([ "$CIRCLE_BRANCH" == circle-ci ] && echo "circle-ci-" || echo "")$(node -p -e "require('./package.json').version") npm run test
+    - docker run constellates/$CIRCLE_PROJECT_REPONAME:$([ "$CIRCLE_BRANCH" == circle-ci ] && echo "dev-" || echo "")$(node -p -e "require('./package.json').version") npm run test
 
 deployment:
   development:
