--- a/circle.yml
+++ b/circle.yml
@@ -6,25 +6,25 @@ machine:
 
 dependencies:
   pre:
-    - docker build -t constellates/$CIRCLE_PROJECT_REPONAME:$([ "$CIRCLE_BRANCH" == circle-ci ] && echo "dev-" || echo "")$(node -p -e "require('./package.json').version") .
+    - docker build -t poldracklab/$CIRCLE_PROJECT_REPONAME:$([ "$CIRCLE_BRANCH" == dev ] && echo "dev-" || echo "")$(node -p -e "require('./package.json').version") .
 
 test:
   override:
     # Lint
-    - docker run constellates/$CIRCLE_PROJECT_REPONAME:$([ "$CIRCLE_BRANCH" == circle-ci ] && echo "dev-" || echo "")$(node -p -e "require('./package.json').version") npm run lint
+    - docker run poldracklab/$CIRCLE_PROJECT_REPONAME:$([ "$CIRCLE_BRANCH" == dev ] && echo "dev-" || echo "")$(node -p -e "require('./package.json').version") npm run lint
     # Unit Tests
-    - docker run constellates/$CIRCLE_PROJECT_REPONAME:$([ "$CIRCLE_BRANCH" == circle-ci ] && echo "dev-" || echo "")$(node -p -e "require('./package.json').version") npm run test
+    - docker run poldracklab/$CIRCLE_PROJECT_REPONAME:$([ "$CIRCLE_BRANCH" == dev ] && echo "dev-" || echo "")$(node -p -e "require('./package.json').version") npm run test
 
 deployment:
   development:
-    branch: circle-ci
+    branch: dev
     commands:
       - docker login -e $DOCKER_EMAIL -u $DOCKER_USER -p $DOCKER_PASS
-      - docker tag constellates/$CIRCLE_PROJECT_REPONAME:dev-$(node -p -e "require('./package.json').version") constellates/$CIRCLE_PROJECT_REPONAME:dev-latest
-      - docker push constellates/$CIRCLE_PROJECT_REPONAME
+      - docker tag poldracklab/$CIRCLE_PROJECT_REPONAME:dev-$(node -p -e "require('./package.json').version") poldracklab/$CIRCLE_PROJECT_REPONAME:dev-latest
+      - docker push poldracklab/$CIRCLE_PROJECT_REPONAME
   production:
     branch: master
     commands:
       - docker login -e $DOCKER_EMAIL -u $DOCKER_USER -p $DOCKER_PASS
-      - docker tag constellates/$CIRCLE_PROJECT_REPONAME:$(node -p -e "require('./package.json').version") constellates/$CIRCLE_PROJECT_REPONAME:latest
-      - docker push constellates/$CIRCLE_PROJECT_REPONAME
+      - docker tag poldracklab/$CIRCLE_PROJECT_REPONAME:$(node -p -e "require('./package.json').version") poldracklab/$CIRCLE_PROJECT_REPONAME:latest
+      - docker push poldracklab/$CIRCLE_PROJECT_REPONAME
