Added temporary feature branch docker deployment for oauth testing

--- a/circle.yml
+++ b/circle.yml
@@ -6,7 +6,7 @@ machine:
 
 dependencies:
   pre:
-    - docker build -t poldracklab/$CIRCLE_PROJECT_REPONAME:$([ "$CIRCLE_BRANCH" == dev ] && echo "dev-" || echo "")$(node -p -e "require('./package.json').version") .
+    - docker build -t poldracklab/$CIRCLE_PROJECT_REPONAME:$([ "$CIRCLE_BRANCH" == oauth-popups ] && echo "oauth-popups-" || echo "")$(node -p -e "require('./package.json').version") .
 
 test:
   override:
@@ -28,9 +28,8 @@ deployment:
       - docker login -e $DOCKER_EMAIL -u $DOCKER_USER -p $DOCKER_PASS
       - docker tag poldracklab/$CIRCLE_PROJECT_REPONAME:$(node -p -e "require('./package.json').version") poldracklab/$CIRCLE_PROJECT_REPONAME:latest
       - docker push poldracklab/$CIRCLE_PROJECT_REPONAME
-  test:
+  production:
     branch: oauth-popups
     commands:
       - docker login -e $DOCKER_EMAIL -u $DOCKER_USER -p $DOCKER_PASS
-      - docker tag poldracklab/$CIRCLE_PROJECT_REPONAME:oauth-popups-$(node -p -e "require('./package.json').version")
       - docker push poldracklab/$CIRCLE_PROJECT_REPONAME
