--- a/circle.yml
+++ b/circle.yml
@@ -6,14 +6,14 @@ machine:
 
 dependencies:
   pre:
-    - docker build -t poldracklab/$CIRCLE_PROJECT_REPONAME:$([ "$CIRCLE_BRANCH" == oauth-popups ] && echo "oauth-popups-" || echo "")$(node -p -e "require('./package.json').version") .
+    - docker build -t poldracklab/$CIRCLE_PROJECT_REPONAME:$([ "$CIRCLE_BRANCH" == dev ] && echo "dev-" || echo "")$(node -p -e "require('./package.json').version") .
 
 test:
   override:
     # Lint
-    - docker run poldracklab/$CIRCLE_PROJECT_REPONAME:$([ "$CIRCLE_BRANCH" == oauth-popups ] && echo "oauth-popups-" || echo "")$(node -p -e "require('./package.json').version") npm run lint
+    - docker run poldracklab/$CIRCLE_PROJECT_REPONAME:$([ "$CIRCLE_BRANCH" == dev ] && echo "dev-" || echo "")$(node -p -e "require('./package.json').version") npm run lint
     # Unit Tests
-    - docker run poldracklab/$CIRCLE_PROJECT_REPONAME:$([ "$CIRCLE_BRANCH" == oauth-popups ] && echo "oauth-popups-" || echo "")$(node -p -e "require('./package.json').version") npm run test
+    - docker run poldracklab/$CIRCLE_PROJECT_REPONAME:$([ "$CIRCLE_BRANCH" == dev ] && echo "dev-" || echo "")$(node -p -e "require('./package.json').version") npm run test
 
 deployment:
   development:
@@ -27,9 +27,4 @@ deployment:
     commands:
       - docker login -e $DOCKER_EMAIL -u $DOCKER_USER -p $DOCKER_PASS
       - docker tag poldracklab/$CIRCLE_PROJECT_REPONAME:$(node -p -e "require('./package.json').version") poldracklab/$CIRCLE_PROJECT_REPONAME:latest
-      - docker push poldracklab/$CIRCLE_PROJECT_REPONAME
-  production:
-    branch: oauth-popups
-    commands:
-      - docker login -e $DOCKER_EMAIL -u $DOCKER_USER -p $DOCKER_PASS
       - docker push poldracklab/$CIRCLE_PROJECT_REPONAME
