--- a/circle.yml
+++ b/circle.yml
@@ -6,21 +6,21 @@ machine:
 
 dependencies:
   pre:
-    - docker build -t poldracklab/$CIRCLE_PROJECT_REPONAME:$([ "$CIRCLE_BRANCH" == dev ] && echo "dev-" || echo "")$(node -p -e "require('./package.json').version") .
+    - docker build -t poldracklab/$CIRCLE_PROJECT_REPONAME:$([ "$CIRCLE_BRANCH" == auth-test ] && echo "auth-test-" || echo "")$(node -p -e "require('./package.json').version") .
 
 test:
   override:
     # Lint
-    - docker run poldracklab/$CIRCLE_PROJECT_REPONAME:$([ "$CIRCLE_BRANCH" == dev ] && echo "dev-" || echo "")$(node -p -e "require('./package.json').version") npm run lint
+    - docker run poldracklab/$CIRCLE_PROJECT_REPONAME:$([ "$CIRCLE_BRANCH" == auth-test ] && echo "auth-test-" || echo "")$(node -p -e "require('./package.json').version") npm run lint
     # Unit Tests
-    - docker run poldracklab/$CIRCLE_PROJECT_REPONAME:$([ "$CIRCLE_BRANCH" == dev ] && echo "dev-" || echo "")$(node -p -e "require('./package.json').version") npm run test
+    - docker run poldracklab/$CIRCLE_PROJECT_REPONAME:$([ "$CIRCLE_BRANCH" == auth-test ] && echo "auth-test-" || echo "")$(node -p -e "require('./package.json').version") npm run test
 
 deployment:
-  development:
-    branch: dev
+  auth-test:
+    branch: auth-test
     commands:
       - docker login -e $DOCKER_EMAIL -u $DOCKER_USER -p $DOCKER_PASS
-      - docker tag poldracklab/$CIRCLE_PROJECT_REPONAME:dev-$(node -p -e "require('./package.json').version") poldracklab/$CIRCLE_PROJECT_REPONAME:dev-latest
+      - docker tag poldracklab/$CIRCLE_PROJECT_REPONAME:auth-test-$(node -p -e "require('./package.json').version") poldracklab/$CIRCLE_PROJECT_REPONAME:auth-test-latest
       - docker push poldracklab/$CIRCLE_PROJECT_REPONAME
   production:
     branch: master
