--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "archiver": "^1.0.0",
     "async": "^1.5.0",
+    "aws-sdk": "2.14.0",
     "babel": "^5.8.23",
     "bids-validator": "0.20.0",
     "body-parser": "^1.14.0",
