--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "author": "Squishymedia",
   "license": " ",
   "dependencies": {
+    "ajv": "4.9.0",
     "archiver": "^1.0.0",
     "async": "^1.5.0",
     "aws-sdk": "2.14.0",
