Build the AWS branch as its own docker tag.

--- a/circle.yml
+++ b/circle.yml
@@ -16,6 +16,12 @@ test:
     - docker run poldracklab/$CIRCLE_PROJECT_REPONAME:$([ "$CIRCLE_BRANCH" == dev ] && echo "dev-" || echo "")$(node -p -e "require('./package.json').version") npm run test
 
 deployment:
+  aws:
+    branch: aws
+    commands:
+      - docker login -e $DOCKER_EMAIL -u $DOCKER_USER -p $DOCKER_PASS
+      - docker tag poldracklab/$CIRCLE_PROJECT_REPONAME:aws-$(node -p -e "require('./package.json').version") poldracklab/$CIRCLE_PROJECT_REPONAME:aws-latest
+      - docker push poldracklab/$CIRCLE_PROJECT_REPONAME
   development:
     branch: dev
     commands:
