--- a/circle.yml
+++ b/circle.yml
@@ -17,7 +17,7 @@ test:
 
 deployment:
   aws:
-    branch: aws-batch
+    branch: aws
     commands:
       - docker login -e $DOCKER_EMAIL -u $DOCKER_USER -p $DOCKER_PASS
       - docker tag poldracklab/$CIRCLE_PROJECT_REPONAME:aws-$(node -p -e "require('./package.json').version") poldracklab/$CIRCLE_PROJECT_REPONAME:aws-latest
