--- a/package.json
+++ b/package.json
@@ -24,8 +24,9 @@
     "react": "0.14.8",
     "react-bootstrap": "0.29.4",
     "react-dom": "0.14.0",
+    "react-input-autosize": "^1.1.0",
     "react-router": "^0.13.3",
-    "react-select": "1.0.0-beta14",
+    "react-select": "^1.0.0-rc.3",
     "reactable": "0.14.0",
     "reflux": "^0.2.7",
     "remarkable": "1.6.2",
