--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "crn-server",
-  "version": "0.6.0-beta.5",
+  "version": "0.6.0-rc.1",
   "description": "",
   "main": "index.js",
   "scripts": {
