--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "body-parser": "^1.14.0",
     "cron": "^1.1.0",
     "express": "^4.13.3",
+    "express-fileupload": "^0.1.4",
     "ioredis": "^3.1.1",
     "juice": "^2.0.0",
     "moment": "^2.14.1",
