--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "crn-server",
-  "version": "0.7.0-alpha",
+  "version": "0.7.0",
   "description": "",
   "main": "index.js",
   "scripts": {
