--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "CRN",
-  "version": "0.12.1-alpha",
+  "version": "0.12.1",
   "description": "React JS web frontend for the CRN application.",
   "main": "app.js",
   "repository": {
