--- a/circle.yml
+++ b/circle.yml
@@ -23,6 +23,7 @@ deployment:
   production:
     tag: /v.*/
     commands:
+      - docker login -e $DOCKER_EMAIL -u $DOCKER_USER -p $DOCKER_PASS
       - docker tag openneuro/server openneuro/server:$CIRCLE_TAG
       - docker tag openneuro/app openneuro/app:$CIRCLE_TAG
       - docker push openneuro/server
