--- a/circle.yml
+++ b/circle.yml
@@ -20,6 +20,14 @@ test:
     - docker run openneuro/app npm run test
 
 deployment:
+  dev:
+    branch: master
+    commands:
+      - docker login -e $DOCKER_EMAIL -u $DOCKER_USER -p $DOCKER_PASS
+      - docker tag openneuro/server openneuro/server:latest
+      - docker tag openneuro/app openneuro/app:latest
+      - docker push openneuro/server
+      - docker push openneuro/app
   production:
     tag: /v.*/
     commands:
