--- a/circle.yml
+++ b/circle.yml
@@ -24,8 +24,9 @@ deployment:
     branch: master
     commands:
       - docker login -e $DOCKER_EMAIL -u $DOCKER_USER -p $DOCKER_PASS
-      - docker tag openneuro/server openneuro/server:latest
-      - docker tag openneuro/app openneuro/app:latest
+      # Update latest tag
+      - docker tag -f openneuro/server openneuro/server:latest
+      - docker tag -f openneuro/app openneuro/app:latest
       - docker push openneuro/server
       - docker push openneuro/app
   production:
