Update version to 1.0.0 for the server and app.

--- a/server/package.json
+++ b/server/package.json
@@ -1,6 +1,6 @@
 {
   "name": "crn-server",
-  "version": "0.7.2-alpha",
+  "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
