--- a/app/package.json
+++ b/app/package.json
@@ -1,6 +1,6 @@
 {
   "name": "CRN",
-  "version": "0.12.3-alpha",
+  "version": "1.0.0",
   "description": "React JS web frontend for the CRN application.",
   "main": "app.js",
   "repository": {
