--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -1,4 +1,4 @@
-FROM node:4.4.1
+FROM node:6.11.2
 
 # accept 'branch' build argument
 ARG branch
@@ -9,7 +9,7 @@ WORKDIR /srv/crn-app
 # install web app
 ADD . /srv/crn-app
 RUN npm install
-RUN npm install -g gulp-cli
+RUN npm install -g gulp-cli yarn
 
 # build app
 CMD gulp build
