Update node to latest stable and use yarn for packages in the server.

--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -1,4 +1,4 @@
-FROM node:4.4.1
+FROM node:6.11.2
 
 # setup server directory
 RUN mkdir /srv/crn-server
@@ -6,7 +6,7 @@ WORKDIR /srv/crn-server
 
 # install server app
 ADD . /srv/crn-server
-RUN npm install
+RUN npm install -g yarn && yarn install
 
 # start server
 CMD ["node", "/srv/crn-server/index.js"]
