--- a/app/package.json
+++ b/app/package.json
@@ -2,6 +2,7 @@
   "name": "CRN",
   "version": "1.0.1",
   "description": "React JS web frontend for the CRN application.",
+  "license": "MIT",
   "main": "app.js",
   "repository": {
     "type": "git"
