--- a/app/package.json
+++ b/app/package.json
@@ -39,6 +39,7 @@
   "devDependencies": {
     "babel": "5.8.23",
     "babel-jest": "^20.0.3",
+    "babel-loader": "^7.1.2",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "babelify": "^5.0.4",
@@ -63,7 +64,8 @@
     "react-addons-test-utils": "0.14.8",
     "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "^1.1.0",
-    "watchify": "^2.4.0"
+    "watchify": "^2.4.0",
+    "webpack": "^3.5.5"
   },
   "jest": {
     "setupFiles": [
