--- a/app/package.json
+++ b/app/package.json
@@ -60,12 +60,14 @@
     "gulp-sass": "^2.2.0",
     "gulp-sourcemaps": "^1.5.0",
     "gulp-uglify": "^1.1.0",
+    "html-webpack-plugin": "^2.30.1",
     "jest": "^20.0.4",
     "react-addons-test-utils": "0.14.8",
     "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "^1.1.0",
     "watchify": "^2.4.0",
-    "webpack": "^3.5.5"
+    "webpack": "^3.5.5",
+    "webpack-dev-server": "^2.7.1"
   },
   "jest": {
     "setupFiles": [
