--- a/app/package.json
+++ b/app/package.json
@@ -22,6 +22,7 @@
     "bytes": "^2.3.0",
     "favico.js": "git://github.com/ejci/favico.js#0.3.10",
     "moment": "^2.10.3",
+    "papaya": "^1.1.4",
     "pluralize": "^1.1.2",
     "react": "0.14.8",
     "react-bootstrap": "0.29.4",
@@ -45,6 +46,7 @@
     "babelify": "^5.0.4",
     "browser-sync": "^2.2.3",
     "browserify": "^9.0.3",
+    "clean-webpack-plugin": "^0.1.16",
     "connect-history-api-fallback": "^1.2.0",
     "del": "2.2.0",
     "enzyme": "^2.9.1",
