--- a/app/package.json
+++ b/app/package.json
@@ -21,6 +21,7 @@
     "bowser": "^1.7.3",
     "bytes": "^2.3.0",
     "favico.js": "git://github.com/ejci/favico.js#0.3.10",
+    "load-google-api": "^0.1.3",
     "moment": "^2.10.3",
     "papaya": "^1.1.4",
     "pluralize": "^1.1.2",
