--- a/app/package.json
+++ b/app/package.json
@@ -8,6 +8,8 @@
     "type": "git"
   },
   "scripts": {
+    "start": "webpack-dev-server --config webpack.dev.js --progress --watch",
+    "build": "webpack --config webpack.prod.js",
     "lint": "eslint src/scripts/ src/tests/",
     "test": "jest",
     "test:watch": "jest --watch",
@@ -45,6 +47,7 @@
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "babelify": "^5.0.4",
+    "babili-webpack-plugin": "^0.1.2",
     "browser-sync": "^2.2.3",
     "browserify": "^9.0.3",
     "clean-webpack-plugin": "^0.1.16",
@@ -70,7 +73,8 @@
     "vinyl-source-stream": "^1.1.0",
     "watchify": "^2.4.0",
     "webpack": "^3.5.5",
-    "webpack-dev-server": "^2.7.1"
+    "webpack-dev-server": "^2.7.1",
+    "webpack-merge": "^4.1.0"
   },
   "jest": {
     "setupFiles": [
