--- a/app/package.json
+++ b/app/package.json
@@ -48,13 +48,18 @@
     "babel-preset-react": "^6.24.1",
     "babili-webpack-plugin": "^0.1.2",
     "clean-webpack-plugin": "^0.1.16",
+    "css-loader": "^0.28.7",
     "enzyme": "^2.9.1",
     "enzyme-to-json": "^1.5.1",
     "eslint": "2.7.0",
     "eslint-plugin-react": "^4.3.0",
+    "extract-text-webpack-plugin": "^3.0.0",
     "html-webpack-plugin": "^2.30.1",
     "jest": "^20.0.4",
+    "node-sass": "^4.5.3",
     "react-addons-test-utils": "0.14.8",
+    "sass-loader": "^6.0.6",
+    "style-loader": "^0.18.2",
     "watchify": "^2.4.0",
     "webpack": "^3.5.5",
     "webpack-dev-server": "^2.7.1",
