--- a/app/package.json
+++ b/app/package.json
@@ -53,12 +53,14 @@
     "eslint": "2.7.0",
     "eslint-plugin-react": "^4.3.0",
     "extract-text-webpack-plugin": "^3.0.0",
+    "file-loader": "^0.11.2",
     "html-webpack-plugin": "^2.30.1",
     "jest": "^20.0.4",
     "node-sass": "^4.5.3",
     "react-addons-test-utils": "0.14.8",
     "sass-loader": "^6.0.6",
     "style-loader": "^0.18.2",
+    "url-loader": "^0.5.9",
     "watchify": "^2.4.0",
     "webpack": "^3.5.5",
     "webpack-dev-server": "^2.7.1",
