--- a/app/package.json
+++ b/app/package.json
@@ -43,9 +43,9 @@
     "babel": "5.8.23",
     "babel-jest": "^20.0.3",
     "babel-loader": "^7.1.2",
+    "babel-minify-webpack-plugin": "^0.2.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
-    "babili-webpack-plugin": "^0.1.2",
     "clean-webpack-plugin": "^0.1.16",
     "css-loader": "^0.28.7",
     "enzyme": "^2.9.1",
