--- a/app/package.json
+++ b/app/package.json
@@ -19,7 +19,7 @@
   "dependencies": {
     "async": "^1.2.1",
     "babel-polyfill": "^6.6.1",
-    "bids-validator": "0.21.6",
+    "bids-validator": "^0.23.1",
     "bowser": "^1.7.3",
     "bytes": "^2.3.0",
     "favico.js": "git://github.com/ejci/favico.js#0.3.10",
