--- a/app/package.json
+++ b/app/package.json
@@ -8,7 +8,7 @@
     "type": "git"
   },
   "scripts": {
-    "start": "webpack-dev-server --config webpack.dev.js --progress --watch",
+    "start": "webpack-dev-server --config webpack.dev.js --progress --watch --color",
     "build": "webpack --config webpack.prod.js",
     "lint": "eslint src/scripts/ src/tests/",
     "test": "jest",
