--- a/app/package.json
+++ b/app/package.json
@@ -37,7 +37,7 @@
     "reflux": "^0.2.7",
     "remarkable": "1.6.2",
     "spark-md5": "^1.0.0",
-    "superagent": "^1.0.0"
+    "superagent": "3.6.0"
   },
   "devDependencies": {
     "babel": "5.8.23",
