--- a/app/package.json
+++ b/app/package.json
@@ -60,6 +60,7 @@
     "jest": "^20.0.4",
     "moment-timezone": "^0.5.13",
     "node-sass": "^4.5.3",
+    "prettier": "^1.7.0",
     "react-addons-test-utils": "0.14.8",
     "sass-loader": "^6.0.6",
     "style-loader": "^0.18.2",
