Update prettier and eslint rules.

--- a/app/.eslintrc.json
+++ b/app/.eslintrc.json
@@ -31,7 +31,7 @@
         ],
         "semi": [
             "error",
-            "always"
+            "never"
         ]
     },
     "settings": {
