--- a/app/.eslintrc.json
+++ b/app/.eslintrc.json
@@ -6,12 +6,11 @@
         "jest": true
     },
     "extends": ["eslint:recommended", "plugin:react/recommended"],
+    "parser": "babel-eslint",
     "parserOptions": {
-        "ecmaFeatures": {
-            "experimentalObjectRestSpread": true,
-            "jsx": true
-        },
-        "sourceType": "module"
+        "sourceType": "module",
+        "allowImportExportEverywhere": false,
+        "codeFrame": false
     },
     "plugins": [
         "react"
