--- a/app/package.json
+++ b/app/package.json
@@ -11,7 +11,7 @@
         "start":
             "webpack-dev-server --config webpack.dev.js --progress --watch --color",
         "build": "webpack --config webpack.prod.js",
-        "lint": "eslint src/scripts/ src/tests/",
+        "lint": "eslint src/scripts/",
         "test": "jest",
         "test:watch": "jest --watch",
         "test:coverage": "jest --coverage",
@@ -43,6 +43,7 @@
     },
     "devDependencies": {
         "babel": "5.8.23",
+        "babel-eslint": "7",
         "babel-jest": "^20.0.3",
         "babel-loader": "^7.1.2",
         "babel-minify-webpack-plugin": "^0.2.0",
@@ -54,7 +55,7 @@
         "css-loader": "^0.28.7",
         "enzyme": "^2.9.1",
         "enzyme-to-json": "^1.5.1",
-        "eslint": "2.7.0",
+        "eslint": "3.x",
         "eslint-plugin-react": "^4.3.0",
         "extract-text-webpack-plugin": "^3.0.0",
         "file-loader": "^0.11.2",
