--- a/server/package.json
+++ b/server/package.json
@@ -22,7 +22,7 @@
     "async": "^2.4.1",
     "aws-sdk": "2.50.0",
     "babel": "^5.8.23",
-    "bids-validator": "0.21.6",
+    "bids-validator": "^0.23.2",
     "body-parser": "^1.14.0",
     "cron": "^1.1.0",
     "express": "^4.13.3",
