--- a/codecov.yml
+++ b/codecov.yml
@@ -1,1 +1,18 @@
 comment: false
+
+coverage:
+  status:
+    project:
+      default: off
+      app:
+        flags: app
+      server:
+        flags: server
+
+flags:
+  app:
+    paths:
+      - app
+  server:
+    paths:
+      - server
