add babel plugins and dependencies for code splitting compantible with react-router and JSX (syntac-dynamic-import,babel-plugin-import-inspector)

--- a/app/.babelrc
+++ b/app/.babelrc
@@ -1,3 +1,15 @@
 {
-  "presets": ["babel-preset-es2015", "babel-preset-react"]
+  "presets": 
+  [
+  "babel-preset-es2015", "babel-preset-react"
+  ],
+  "plugins": 
+  [
+  "syntax-dynamic-import",
+
+  ],
+   ["import-inspector", {
+      "serverSideRequirePath": true,
+      "webpackRequireWeakId": true,
+    }]
 }
