Container build speed fixes (#88)
* Exit tests early if any fail.
* Make everything in circle builds parallel.
* Update node version in containers and shrink images with alpine base.

--- a/app/package.json
+++ b/app/package.json
@@ -14,8 +14,8 @@
     "lint": "eslint src/scripts/",
     "test": "jest",
     "test:watch": "jest --watch",
-    "test:coverage": "jest --coverage",
-    "codecov": "jest --coverage && codecov",
+    "coverage": "jest --coverage",
+    "codecov": "codecov -F app",
     "precommit": "lint-staged"
   },
   "author": "Squishymedia",
