switching task delete this commit

--- a/app/.babelrc
+++ b/app/.babelrc
@@ -1,15 +1,3 @@
 {
-  "presets": 
-  [
-  "babel-preset-es2015", "babel-preset-react"
-  ],
-  "plugins": 
-  [
-  "syntax-dynamic-import",
-
-  ],
-   ["import-inspector", {
-      "serverSideRequirePath": true,
-      "webpackRequireWeakId": true,
-    }]
+  "presets": ["babel-preset-es2015", "babel-preset-react"]
 }
