Fix eslint switch -> case levels to match prettier.

--- a/app/.eslintrc.json
+++ b/app/.eslintrc.json
@@ -13,7 +13,7 @@
   },
   "plugins": ["react"],
   "rules": {
-    "indent": ["error", 2],
+    "indent": ["error", 2, { "SwitchCase": 1 }],
     "linebreak-style": ["error", "unix"],
     "quotes": ["error", "single", { "avoidEscape": true }],
     "semi": ["error", "never"]
