Build docker containers at the repo root to include git history info.
This also no longer builds the webpack frontend at run time.

--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -1,12 +1,12 @@
 FROM node:6.11.3-alpine
 
-# setup server directory
-RUN mkdir /srv/crn-server
-WORKDIR /srv/crn-server
-
 # install server app
-ADD . /srv/crn-server
+ADD . /srv
+WORKDIR /srv/server
 RUN npm install -g yarn && yarn install
+
+# Reduce the final image size
+RUN rm -rf /srv/app
 
 # start server
 CMD ["node", "/srv/crn-server/index.js"]
