--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -2,15 +2,20 @@ FROM node:6.11.3-alpine
 
 RUN apk --no-cache --update add git
 
-# accept 'branch' build argument
-ARG branch
+# add the monorepo
+ADD . /build
 
 # setup app directory
+WORKDIR /build/app
+
+# Build the frontend
+RUN npm install -g yarn &&\
+  yarn install --pure-lockfile &&\
+  mkdir -p /srv/app &&\
+  yarn build &&\
+  cp -r /build/app/dist /srv/app/dist
+
 WORKDIR /srv/app
 
-# install web app
-ADD . /srv/app
-RUN npm install -g yarn && yarn install --pure-lockfile
-
-# build app
-CMD yarn build
+# Reduce the final image size
+RUN rm -rf /build && apk del git
