--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -34,9 +34,9 @@ services:
   server:
     image: openneuro/server:${CRN_SERVER_TAG}
     volumes:
-      - ./server/client.config.js:/srv/crn-server/client.config.js:rw
+      - ./server/client.config.js:/srv/server/client.config.js:rw
       - ${PERSISTENT_DIR}/bids-core/persistent/data:/srv/bids-core/persistent/data
-      - ${PERSISTENT_DIR}/crn-server/persistent:/srv/crn-server/persistent
+      - ${PERSISTENT_DIR}/crn-server/persistent:/srv/server/persistent
     env_file: ./config.env
     restart: always
 
@@ -47,9 +47,9 @@ services:
       - node
       - /srv/crn-server/worker.js
     volumes:
-      - ./server/client.config.js:/srv/crn-server/client.config.js:rw
+      - ./server/client.config.js:/srv/server/client.config.js:rw
       - ${PERSISTENT_DIR}/bids-core/persistent/data:/srv/bids-core/persistent/data
-      - ${PERSISTENT_DIR}/crn-server/persistent:/srv/crn-server/persistent
+      - ${PERSISTENT_DIR}/crn-server/persistent:/srv/server/persistent
     env_file: ./config.env
     restart: always
 
@@ -59,7 +59,7 @@ services:
     volumes:
       - ./nginx/nginx.conf:/etc/nginx/conf.d/default.conf:ro
       - ./nginx/.htpasswd:/etc/nginx/.htpasswd:ro
-      - project:/srv/crn-app/dist
+      - project:/srv/app/dist
       - ./acme:/acme
       - ${SSL_DIR}:/etc/nginx/ssl
     ports:
